# FumeStar

./: .gitignore  README.md  bot.py  config.example.json  config.example.py  config.py  fumestop.py  launcher.py  pyproject.toml  requirements.txt
cogs/: __core__.py  __dev__.py  __error__.py  blacklist.py  general.py
utils/: db.py
