[project]
name = "FumeStar"
version = "1.0.0"
description = "Community management bot for the FumeStop ecosystem."
license = "AGPL-3.0"
authors = [
    { name="Sayan Bhattacharyya", email="sayan@sn1f3rt.dev" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiomysql>=0.2.0",
    "click>=8.1.7",
    "discord-py[speed]>=2.4.0",
]

[project.optional-dependencies]
speed = [
    "uvloop>=0.21.0",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.0.1",
    "ruff>=0.8.3",
]

[tool.ruff]
line-length = 85
target-version = "py312"

[tool.ruff.lint.isort]
section-order = ["future", "typing", "standard-library", "third-party", "discord", "first-party", "local-folder", "config"]
force-wrap-aliases = true
combine-as-imports = true
length-sort = true

[tool.ruff.lint.isort.sections]
"config" = ["config"]
"discord" = ["discord"]
"typing" = ["typing"]
